# E-Learning-Platform

./: Dockerfile  Documentation.txt  E-Learning Platform.docx  README.md  Readme.txt  docker-compose.yml  nginx.conf  ssh-keygen  ssh-keygen.gn  ssh-keygen.gn.pub  ssh-keygen.pub
.github/workflows/: django-ci.yml
LearningApi/: db.sqlite3
LearningApi/ELearningApi/: apps.py  urls.py  views.py
LearningApi/LearningApi/: asgi.py  settings.py  urls.py  wsgi.py
SDP/: pyvenv.cfg
SDP/Scripts/: activate  activate.bat
The interface/: Fonts+Colors.txt  index.html  login page.rar  login.html  loginnew.html  signup.html
The interface/login page/: Fonts+Colors.txt
project/: Dockerfile  db.sqlite3  docker-compose.yml  nginx.conf  requirements.txt
project/media/course_images/: images_2.jfif  mechatronics.jfif
project/project/: settings.py  urls.py
project/project/static/css/: styles.css
project/project/templates/: base.html  course_create.html  course_detail.html  course_list.html  index.html  lesson_detail.html  my_courses.html  signin.html  signup.html  test_user.html
project/spApp/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
project/spApp/migrations/: 0001_initial.py  0002_question_lesson_pdf_material_alter_course_instructor_and_more.py  0003_remove_choice_question_remove_question_quiz_and_more.py
project/staticfiles/css/: styles.css
